@@ -1,3 +1,8 @@
+2005-09-07  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtk-doc-manual.xml:
+	  integrated most of the notes from the text files under doc/*.txt
+
 2005-08-24  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtk-doc-manual.xml:
